--- a/other/main.css
+++ b/other/main.css
@@ -1,7 +1,7 @@
 ﻿@media (min-width: 0px) and (max-width:768px) {
     ul{ position:fixed;z-index: 5;text-align: center; padding:1px 1px;}
     .lbh1{color:#005393;font-size: 22px;text-align: left;margin-left: 10px; }
-
+    .lbh2{color:#005393;font-size: 23px;text-align: left;margin-left: 20px;font-weight: bold; }
   
 }
 @media (min-width: 768px) {
@@ -9,6 +9,7 @@
     .linkbutton2{   margin-left: 30px;}
     .linkbutton{   margin-left: 30px;}
     .lbh1{color:#005393;font-size: 25px;text-align: left;margin-left: 20px; }
+    .lbh2{color:#005393;font-size: 30px;text-align: left;margin-left: 20px;font-weight: bold }
 
 }
 
@@ -63,6 +64,6 @@
     .namebutton{float: right;background-color: white;margin-right: 118px;margin-top: 8px;border-style:none; padding: 8.9px 20px;font-size: 15px;border-radius: 5px;color: #005393;}
     .dock{color: #005393;text-align: right}
     #headtitle{font-size: 50px;}
-    .redbutton{width: 100%;height: 20px;background-color:red; border: 0;border-radius: 10px;overflow: hidden;transition: all 1s;}
+    .redbutton{width: 100%;height: 20px;background-color:#A52A2A; border: 0;border-radius: 10px;overflow: hidden;transition: all 1s;}
     .redbutton:hover{height: 115px;}
 
