--- a/other/main.css
+++ b/other/main.css
@@ -1,15 +1,15 @@
 ﻿@media (min-width: 0px) and (max-width:768px) {
     ul{ position:fixed;z-index: 5;text-align: center; padding:1px 1px;}
-    .lbh1{color:#005393;font-size: 22px;text-align: left;margin-left: 10px; }
-    .lbh2{color:#005393;font-size: 23px;text-align: left;margin-left: 20px;font-weight: bold; }
+    .lbh1{color:#518ABD;font-size: 22px;text-align: left;margin-left: 10px; }
+    .lbh2{color:#518ABD;font-size: 23px;text-align: left;margin-left: 20px;font-weight: bold; }
   
 }
 @media (min-width: 768px) {
     ul{ position:fixed;z-index: 5;top:5px;}
     .linkbutton2{margin-left: 30px;}
     .linkbutton{ margin-left: 30px;}
-    .lbh1{color:#005393;font-size: 25px;text-align: left;margin-left: 20px; }
-    .lbh2{color:#005393;font-size: 30px;text-align: left;margin-left: 20px;font-weight: bold }
+    .lbh1{color:#518ABD;font-size: 25px;text-align: left;margin-left: 20px; }
+    .lbh2{color:#518ABD;font-size: 30px;text-align: left;margin-left: 20px;font-weight: bold }
 
 }
 
@@ -21,7 +21,7 @@
         padding: 7.5px 16px;
         float:left;
         list-style:none;
-        color: #005393;
+        color: #518ABD;
         margin:auto;
         transition: all ;
     }
@@ -40,7 +40,7 @@
     .bu4:hover{background-color: #e3e3e9;width: 260px;height: 160px;}
 
     
-    html{  background-image: url(https://s1.ax1x.com/2023/07/28/pCzoeC6.jpg); background-color:#001543;background-repeat: no-repeat;color: white;}
+    html{ background: linear-gradient(to bottom right,#51B4DB,#D1D868 95% );background-repeat: no-repeat;background-attachment:fixed;color: white;}
     body{margin-left: 50px;margin-right: 50px}/*设置页边距*/ 
     a{font-size: 15px;text-align: center;color: white;}
     table{margin: auto;}
@@ -61,9 +61,9 @@
    
     .linkbutton:hover{background-color: #e3e3e9;width:100%+5px;height:120px;}
 
-    .namebutton{float: right;background-color: white;margin-right: 118px;margin-top: 8px;border-style:none; padding: 8.9px 20px;font-size: 15px;border-radius: 5px;color: #005393;}
-    .dock{color: #005393;text-align: right}
+    .namebutton{float: right;background-color: white;margin-right: 118px;margin-top: 8px;border-style:none; padding: 8.9px 20px;font-size: 15px;border-radius: 5px;color: #518ABD;}
+    .dock{color: #518ABD;text-align: right}
     #headtitle{font-size: 50px;}
-    .redbutton{width: 100%;height: 20px;background-color:#A52A2A; border: 0;border-radius: 10px;overflow: hidden;transition: all 1s;}
+    .redbutton{width: 100%;height: 20px;background-color:#BB4444; border: 0;border-radius: 10px;overflow: hidden;transition: all 1s;}
     .redbutton:hover{height: 115px;}
 
